2010-09-14  Oliver Hunt  <oliver@apple.com>

        PPC Build fix.

        * bindings/js/SerializedScriptValue.cpp:
        (WebCore::CloneDeserializer::readFile):
        (WebCore::CloneDeserializer::readTerminal):

2010-09-14  Kwang Yul Seo  <skyul@company100.net>

        Reviewed by Andreas Kling.

        [chromium] Remove unused ICU headers
        https://bugs.webkit.org/show_bug.cgi?id=45698

        Remove unused headers.

        * platform/graphics/chromium/FontCacheLinux.cpp:

2010-09-14  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Antonio Gomes.

        [Qt] Numpad Enter key returns keyCode 0 instead of 13
        https://bugs.webkit.org/show_bug.cgi?id=45014

        Original patch by Jarred Nicholls <jarred.nicholls@gmail.com>

        There is a missing case statement in the PlatformKeyboardEventQt.cpp
        file to handle the Enter button on the number pad.  Because it is not
        handled, the keyCode returned in a JavaScript event is 0 rather than 13.

        Test: manual-tests/qt/numpad-enter-key.html

        * manual-tests/qt/numpad-enter-key.html: Added.
        * platform/qt/PlatformKeyboardEventQt.cpp:
        (WebCore::windowsKeyCodeForKeyEvent):

2010-09-14  Evan Martin  <evan@chromium.org>

        Reviewed by Darin Fisher.

        [chromium] building without debug syms broke after recent refactoring
        https://bugs.webkit.org/show_bug.cgi?id=45720

        Now that we build WebCore as multiple libraries, we need to adjust the
        flags to turn off debug symbols for all of these libraries.

        No new tests; should only affect an uncommon build flag.

        * WebCore.gyp/WebCore.gyp:

2010-09-14  Tony Chang  <tony@chromium.org>

        Unreviewed, fix chromium compile.

        * platform/graphics/chromium/ImageLayerChromium.h:

2010-09-14  Nico Weber  <thakis@chromium.org>

        Reviewed by Darin Fisher.

        [chromium]: crash less in compositor mode on mac