@@ -266,5 +266,6 @@
     <file>Images/warningOrangeDot.png</file>
     <file>Images/warningsErrors.png</file>
     <file>Images/whiteConnectorPoint.png</file>
+    <file alias="DebuggerScript.js">../../bindings/v8/DebuggerScript.js</file>
 </qresource>
 </RCC>
