@@ -1,3 +1,15 @@
+2010-09-14  Andreas Kling  <andreas.kling@nokia.com>
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        [Qt] V8 port: Get inspector up and running
+        https://bugs.webkit.org/show_bug.cgi?id=45771
+
+        * WebCoreSupport/InspectorClientQt.cpp:
+        (WebCore::ensureDebuggerScriptLoaded): Added, loads DebuggerScript.js into ScriptDebugServer.
+        (WebCore::InspectorClientQt::openInspectorFrontend): Ensure that DebuggerScript.js is loaded
+        before opening an inspector.
+
 2010-09-14  Enrico Ros  <eros@codeaurora.org>
 
         Reviewed by Andreas Kling.
