@@ -1,3 +1,12 @@
+2010-09-14  Andreas Kling  <andreas.kling@nokia.com>
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        [Qt] V8 port: Get inspector up and running
+        https://bugs.webkit.org/show_bug.cgi?id=45771
+
+        * inspector/front-end/WebKit.qrc: Add DebuggerScript.js
+
 2010-09-14  Oliver Hunt  <oliver@apple.com>
 
         PPC Build fix.
